@@ -198,7 +198,7 @@ public class SoftButtonsListActivity extends ListActivity {
 			// create and add default soft button
 			Image img = new Image();
 			img.setValue("imageFilename");
-			img.setImageType(ImageType.STATIC);
+			img.setImageType(ImageType.DYNAMIC);
 
 			SoftButton sb = new SoftButton();
 			sb.setSoftButtonID(SyncProxyTester.getNewSoftButtonId());
